# magic-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: maturin.yml  rust.yml
file/: Cargo.toml  build.rs
file/src/: main.rs
lazy-cache/: Cargo.toml
lazy-cache/benches/: lazy_cache_benchmark.rs
lazy-cache/src/: lib.rs
lib/: Cargo.toml
lib/src/: grammar.pest  lib.rs
magdir/: archive  commands  elf  pdf  perl  rust  varied.script
magic/: .gitignore  Cargo.toml  README.md
magic-db/: Cargo.toml  README.md  build.rs
magic-db/src/: lib.rs
magic-db/src/magdir/: archive  commands  compress  pdf  python  r  rtf  rust  varied.script  zip
magic-embed/: Cargo.toml  README.md
magic-embed/src/: lib.rs
magic/src/: grammar.pest  lib.rs  numeric.rs  parser.rs  utils.rs
magic/src/magdir/: ctf  firmware  flash
pure-magic/: Cargo.toml  README.md
pure-magic/src/: dou.rs  lib.rs  parser.rs  utils.rs
python/: Cargo.toml  README.md  pure_magic_rs.pyi  pyproject.toml
python/src/: lib.rs
python/tests/: test_pymagic.py
wiza/: Cargo.toml  README.md
wiza/src/: main.rs
