[package]
name = "file"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.42", features = ["derive"] }
magic-rs = { path = "../magic" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
lazy-cache = { path = "../lazy-cache/" }
fs-walk = "0.2.0"
serde_json = "1.0.145"
serde_derive = "1.0.228"
serde = "1.0.228"
