[package]
name = "file-rs"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["cli", "magic", "file", "mime", "identification"]
description = "Command line tool for file identification"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.42", features = ["derive"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
fs-walk = "0.2.0"
serde_json = "1.0.145"
serde_derive = "1.0.228"
serde = "1.0.228"
magic-rs = { path = "../magic" }
magic-db = { path = "../magic-db" }

[[bin]]
name = "file"
path = "src/main.rs"
