[package]
name = "lazy-cache"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
memmap2 = "0.9.8"

[dev-dependencies]
criterion = "0.7.0"
rand = "0.9.2"
tempfile = "3.23.0"

[[bench]]
name = "lazy_cache_benchmark"
harness = false
