[package]
name = "lazy-cache"
version = "0.1.2"
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Lazy file cache optimizing read operations for pure-magic crate"

[dependencies]
memmap2 = "0.9.8"

[dev-dependencies]
criterion = "0.7.0"
rand = "0.9.2"
tempfile = "3.23.0"

[[bench]]
name = "lazy_cache_benchmark"
harness = false
