[package]
name = "magic-db"
version = "0.1.2"
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "This crate provides a precompiled magic database for file type identification. It allows any program to perform magic file detection without the burden of compiling rules from source."
keywords = ["magic", "mime", "libmagic", "embedded", "database"]

[dependencies]
magic-rs = { path = "../magic", version = "0.1" }
magic-embed = { path = "../magic-embed", version = "0.1" }
