[package]
name = "magic-embed"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Proc-macro to embed a compiled magic database"

[dependencies]
magic-rs = { path = "../magic" }
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
fs-walk = "0.2.0"

[lib]
proc-macro = true
