[package]
name = "magic-rs"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["magic", "file", "mime", "identification", "libmagic"]
description = "Safe Rust re-implementation of libmagic"

[dependencies]
chrono = "0.4.41"
dyf = { version = "0.1.1", features = ["serde"] }
flagset = { version = "0.4.7", features = ["serde"] }
pest = "2.7.14"
pest_derive = "2.7.14"
regex = "1.11.1"
thiserror = "2.0.12"
tracing = "0.1.41"
lazy-cache = { path = "../lazy-cache/", version = "0.1" }
uuid = "1.18.1"
memchr = "2.7.6"
serde_json = "1.0.145"
csv = "1.3.1"
tar = "0.4.44"
serde = { version = "1.0.228", features = ["serde_derive"] }
bincode = { version = "2.0.1", features = ["serde"] }
flate2 = "1.1.4"

[dev-dependencies]
tracing-subscriber = { version = "0.3.19" }
