[package]
name = "pure-magic-rs"
version = "0.1.2"
edition = "2021"
description = "Python bindings for pure-magic crate"
authors.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[lib]
name = "magic"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.0"
magic-db = { path = "../magic-db" }
pure-magic = { path = "../pure-magic" }
