[package]
name = "pure-magic-rs"
version = "0.2.3"
edition = "2021"
description = "Python bindings for pure-magic crate"
authors.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[lib]
name = "pure_magic_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.0"
magic-db = { path = "../magic-db" }
pure-magic = { path = "../pure-magic" }
