[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "pymagic-rs"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
authors = [{ name = "Quentin JEROME", email = "quentin.jerome@circl.lu" }]
maintainers = [{ name = "Quentin JEROME", email = "quentin.jerome@circl.lu" }]
description = "Python bindings for magic-rs, a pure Rust libmagic alternative"
readme = "README.md"
[tool.maturin]
features = ["pyo3/extension-module"]
